# bge-custom

./: .dockerignore  .envrc  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  flake.nix  main.py  mutagen.yml  pyproject.toml
app/: __init__.py  log.py
app/routes/: __init__.py  embeddings.py  models.py  score.py
app/services/: __init__.py  model_service.py
