[project]
name = "bge-custom"
version = "0.1.0"
description = "BGE-M3 OpenAI-Compatible API Server"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "uvicorn[standard]>=0.27.0",
    "FlagEmbedding>=1.4.0",
    "transformers>=5.0.0",
    "torch>=2.0.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "fastapi>=0.139.0",
    "sololib>=0.3.9.7",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.26.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
